# predicting_models_NBA_games

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.sh  compose.yaml  environment.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: CI.yml
dags/salary/catboost/: dvc.yaml  metrics.json
dags/salary/net/: dvc.yaml  features_preprocessor.pkl  metrics.json  target_preprocessor.pkl
data/: 2011_advanced_plus_totals.csv  2012_advanced_plus_totals.csv  2013_advanced_plus_totals.csv  2014_advanced_plus_totals.csv  2015_advanced_plus_totals.csv  2016_advanced_plus_totals.csv  2017_advanced_plus_totals.csv  2018_advanced_plus_totals.csv  2019_advanced.csv  2019_advanced_plus_basic.csv  2019_advanced_plus_totals.csv  2019_advanced_plus_totals_quarter1.csv  2020_advanced_plus_totals.csv  2021_advanced_plus_totals.csv  features_description.md
data/interim/: .gitignore  epv.dvc
data/interim/salary/: cb_test.csv  cb_train.csv
data/processed/: epv.dvc
data/processed/salary/: cb_test_features_target.csv  train_features_target.csv
data/raw/: .gitignore  advanced_plus_totals.dvc  movement.dvc
grafana/: datasource.yml
models/salary/: catboost.cbm  catboost.onnx  catboost_params.json  net.pt  net_params.json  params.json
notebooks/: EDA.ipynb  eda_nba_2019.ipynb  pandas_profiling.ipynb  salary_model.ipynb
prometheus/: prometheus.yml
src/: app.py
src/app/: app.py  salary_model.py  salary_pipeline.py
src/epv/: consts.py  params.py  prepare.py  preprocess.py  train.py
src/models/: salary_model.py
src/salary/: consts.py  evaluate.py  featurize.py  make_onnx.py  net.py  params.py  prepare.py  preprocess.py  train.py  train_net.py  utils.py
src/salary/tests/: test_evaluate.py  test_featurize.py  test_prepare.py  test_preprocess.py  test_train.py
src/scraper/: README.md  scraper.py
