[tool.poetry]
name = "predicting_models_NBA_games"
version = "0.1.0"
description = ""
authors = [" "]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
numpy = "^1.25.0"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
catboost = "^1.2"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
