[tool.poetry]
name = "predicting-models-NBA-games"
version = "0.1.0"
description = ""
authors = [" "]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
numpy = "^1.25.0"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
catboost = "^1.2"
click = "^8.1.3"
skl2onnx = "^1.14.1"
mlprodict = "^0.9.1883"
optuna = "^3.2.0"
mlflow = "^2.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
yapf = "^0.40.1"
dvc = "^3.1.0"
dvc-gdrive = "^2.19.2"
beautifulsoup4 = "^4.12.2"
pytest = "^7.3.2"

[tool.poetry.group.app.dependencies]
flask = "^2.3.2"
onnxruntime = "^1.15.1"

[tool.yapfignore]
ignore_patterns = [
  ".git",
  ".venv",
  ".dvc",
  "*.ipynb_checkpoints",
]

[tool.yapf]
based_on_style = "pep8"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
